Fixed not showing correct bullet in unordered list on chrome macOS

--- a/src/scss/nijmegen/core/typography.scss
+++ b/src/scss/nijmegen/core/typography.scss
@@ -126,6 +126,7 @@ ul:not([class]) {
     position: relative;
 
     li {
+        font-family: initial;
         &:before {
             content: '●';
             font-size: to-rem(8);
